--- a/style.css
+++ b/style.css
@@ -1,210 +1,216 @@
 body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: rgb(15, 11, 32); /* Define o fundo preto */
-    color: white; /* Define as letras brancas */
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(15, 11, 32); /* Define o fundo preto */
+  color: white; /* Define as letras brancas */
 }
 
 #app {
-    padding: 20px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; /* Centraliza verticalmente */
-    text-align: center; /* Centraliza horizontalmente */
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; /* Centraliza verticalmente */
+  text-align: center; /* Centraliza horizontalmente */
 }
 
 #app h1 {
-    font-size: 24px;
-    margin-top: 0;
+  font-size: 24px;
+  margin-top: 0;
 }
 
 #app p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 #mapa {
-    border: 1px solid #ddd;
-    max-width: 100%; /* Largura máxima relativa */
-    width: 800px; /* Largura fixa para telas grandes */
-    height: 300px;
+  border: 1px solid #ddd;
+  max-width: 100%; /* Largura máxima relativa */
+  width: 800px; /* Largura fixa para telas grandes */
+  height: 300px;
 }
 
 #mapid {
-    background-color: rgb(214, 226, 255);
-    width: 100%;
-    height: 100%;
+  background-color: rgb(214, 226, 255);
+  width: 100%;
+  height: 100%;
 }
 
 #painel-jogo {
-    margin-top: 20px;
-    padding: 20px;
-    border-radius: 5px;
-    width: 100%;
-    max-width: 600px; /* Largura máxima relativa */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 600px; /* Largura máxima relativa */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #bairro-input {
-    width: 90%;
-    max-width: 600px; /* Largura máxima relativa */
-    height: 35px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px; /* Adiciona bordas arredondadas */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
-    outline: none; /* Remove o contorno ao focar */
+  width: 90%;
+  max-width: 600px; /* Largura máxima relativa */
+  height: 35px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px; /* Adiciona bordas arredondadas */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
+  outline: none; /* Remove o contorno ao focar */
 }
 
 #enviar-btn {
-    margin-top: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none; /* Remove a borda */
-    border-radius: 5px; /* Adiciona bordas arredondadas */
-    background-color: #4CAF50; /* Cor de fundo verde */
-    color: white; /* Cor do texto branco */
-    cursor: pointer;
-    transition: background-color 0.3s; /* Adiciona uma transição suave */
+  margin-top: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none; /* Remove a borda */
+  border-radius: 5px; /* Adiciona bordas arredondadas */
+  background-color: #4caf50; /* Cor de fundo verde */
+  color: white; /* Cor do texto branco */
+  cursor: pointer;
+  transition: background-color 0.3s; /* Adiciona uma transição suave */
 }
 
 #enviar-btn:hover {
-    background-color: #45a049; /* Muda a cor de fundo ao passar o mouse */
+  background-color: #45a049; /* Muda a cor de fundo ao passar o mouse */
 }
 
 #resultado {
-    margin-top: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    max-height: 200px; /* Defina uma altura máxima para a lista */
-    overflow-y: auto; /* Adicione uma barra de rolagem vertical conforme necessário */
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  max-height: 200px; /* Defina uma altura máxima para a lista */
+  overflow-y: auto; /* Adicione uma barra de rolagem vertical conforme necessário */
 }
 
 .awesomplete {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 .awesomplete > input {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .awesomplete > ul {
-    position: absolute;
-    left: 0;
-    top: 100%;
-    z-index: 1;
-    min-width: 100%;
-    box-sizing: border-box;
-    list-style: none;
-    padding: 0;
-    border-radius: .3em;
-    background: hsla(0,0%,100%,.9);
-    background: linear-gradient(to bottom right, white, hsla(0,0%,100%,.8));
-    border: 1px solid rgba(0,0,0,.3);
-    box-shadow: .05em .2em .6em rgba(0,0,0,.2);
-    text-shadow: none;
-    max-height: 200px; /* Defina uma altura máxima para a lista */
-    overflow-y: auto; /* Adicione uma barra de rolagem vertical conforme necessário */
+  position: absolute;
+  left: 0;
+  top: 100%;
+  z-index: 1;
+  min-width: 100%;
+  box-sizing: border-box;
+  list-style: none;
+  padding: 0;
+  border-radius: 0.3em;
+  background: hsla(0, 0%, 100%, 0.9);
+  background: linear-gradient(to bottom right, white, hsla(0, 0%, 100%, 0.8));
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 0.05em 0.2em 0.6em rgba(0, 0, 0, 0.2);
+  text-shadow: none;
+  max-height: 200px; /* Defina uma altura máxima para a lista */
+  overflow-y: auto; /* Adicione uma barra de rolagem vertical conforme necessário */
 }
 
 /* Restante do seu CSS continua aqui */
 
-
 .awesomplete > ul[hidden],
 .awesomplete > ul:empty {
-    display: none;
+  display: none;
 }
 
 .awesomplete > ul:before {
-    content: "";
-    position: absolute;
-    top: -.43em;
-    left: 1em;
-    width: 0;
-    height: 0;
-    padding: .4em;
-    background: white;
-    border: inherit;
-    border-right: 0;
-    border-bottom: 0;
-    transform: rotate(45deg);
+  content: "";
+  position: absolute;
+  top: -0.43em;
+  left: 1em;
+  width: 0;
+  height: 0;
+  padding: 0.4em;
+  background: white;
+  border: inherit;
+  border-right: 0;
+  border-bottom: 0;
+  transform: rotate(45deg);
 }
 
 .awesomplete > ul > li {
-    position: relative;
-    padding: .2em .5em;
-    cursor: pointer;
-    color: black;
+  position: relative;
+  padding: 0.2em 0.5em;
+  cursor: pointer;
+  color: black;
 }
 
-
 .awesomplete > ul > li:hover {
-    background: rgb(15, 11, 32);
-    color: rgb(255, 255, 255);
+  background: rgb(15, 11, 32);
+  color: rgb(255, 255, 255);
 }
 
 .awesomplete > ul > li[aria-selected="true"] {
-    background: hsl(205, 40%, 40%);
-    color: rgb(0, 0, 0);
+  background: hsl(205, 40%, 40%);
+  color: rgb(0, 0, 0);
 }
 
 .awesomplete mark {
-    background: hsla(65, 100%, 50%, 0);
+  background: hsla(65, 100%, 50%, 0);
 }
 
 .awesomplete li:hover mark {
-    background: hsla(68, 94%, 51%, 0);
-    color: white;
+  background: hsla(68, 94%, 51%, 0);
+  color: white;
 }
 
 .awesomplete li[aria-selected="true"] mark {
-    background: hsl(86, 100%, 21%);
-    color: inherit;
+  background: hsl(86, 100%, 21%);
+  color: inherit;
 }
 
 #resultado {
-    margin-top: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    max-height: 200px; /* Defina uma altura máxima para a lista */
-    overflow-y: auto; /* Adicione uma barra de rolagem vertical conforme necessário */
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  max-height: 200px; /* Defina uma altura máxima para a lista */
+  overflow-y: auto; /* Adicione uma barra de rolagem vertical conforme necessário */
 }
 
-
 .botao-regioes {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
 .botao-regioes:hover {
-    background-color: #45a049;
+  background-color: #45a049;
 }
 
 .botao-regioes span {
-    display: block;
-    font-size: 16px;
+  display: block;
+  font-size: 16px;
 }
 
 #github-link img {
-    width: 80px; 
-    height: auto; 
-  }
-  
+  width: 80px;
+  height: auto;
+}
+
+.visually-hidden {
+  display: none;
+}
+
+.github-icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
